Fixing distorted article images with long, skinny viewport sizes

--- a/sites/all/themes/eshell/styles/scss/features/_article.scss
+++ b/sites/all/themes/eshell/styles/scss/features/_article.scss
@@ -35,11 +35,13 @@
         z-index: -1;
         top: 0;
         bottom: 0;
-        width: 150vw;
-        left: -50%;
+        width: 800vw;
+        left: -400%;
         background: $midnight;
       }
       img{
+        width: auto;
+        max-width: 100%;
         max-height: 90vh;
       }
     }
